<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_margin="30dp"
    tools:context="com.example.android.app.portfolio.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_textbox"
        android:textColor="@color/colorBlack"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal|top"
        android:id="@+id/portfolio_text_lable" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="POPULAR MOVIES"
        android:textColor="@color/colorWhite"
        android:id="@+id/button1"
        android:background="@color/colorUdacious"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal|top" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_app_2"
        android:textColor="@color/colorWhite"
        android:id="@+id/button2"
        android:background="@color/colorUdacious"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_app_3"
        android:textColor="@color/colorWhite"
        android:id="@+id/button3"
        android:background="@color/colorUdacious"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_app_4"
        android:textColor="@color/colorWhite"
        android:id="@+id/button4"
        android:background="@color/colorUdacious"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_app_5"
        android:textColor="@color/colorWhite"
        android:id="@+id/button5"
        android:background="@color/colorUdacious"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_app_6"
        android:textColor="@color/colorWhite"
        android:id="@+id/button6"
        android:background="@color/colorUdacious"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal" />


</LinearLayout>